--- a/Archivists' App/View/EditorView.resx
+++ b/Archivists' App/View/EditorView.resx
@@ -117,7 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="MainGridContextMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAB+hJW//1Brv/9rj///UGu//1FIP/+lbQD/N0k3/wBtpf8Aktz/AG2l/wBtpf8Aktz/AG2l/6Vt
+        AP8AAAB+AAAAQEdVf/9Qa7//UUg//6VtAP9uSQD/AElu/wCS3P8Aktz/AJLc/wCS3P8AbaX/AG2l/wCS
+        3P83STf/AAAAfgAAAAA3JAD/pW0A/25JAP9YY3//WGN//wCS3P8Aktz/AJLc/wCS3P8Aktz/AJLc/wBJ
+        bv8Aktz/AElu/wAAAAAAAAC+AAAAvlhjf/+xx///scf//1hjf/8Aktz/AJLc/wCS3P8ASW7/AElu/wAk
+        N/8ASW7/AJLc/wBJbv8AAAAAAAAAAAAAAH6xx///scf//7HH//9YY3//AJLc/wCS3P8ASW7/AJLc/wBJ
+        bv8Aktz/AJLc/wCS3P8AAAB+AAAAAAAAAAAAAAAAWGN//7HH//+xx///hJW//wBtpf8Aktz/AG2l/wCS
+        3P8ASW7/AJLc/wCS3P8ASW7/AAAAAAAAAAAAAAAAAAAAADtCVb6xx///scf//7HH//8sVnb/AJLc/wCS
+        3P8Aktz/ACQ3/wBJbv8ASW7/AAAAvgAAAAAAAAAAAAAAAAAAAAAAAABAhJW//7HH//+xx///scf//yxW
+        dv8ASW7/LFZ2/4SVv/+xx///scf//7HH//87QlW+AAAAAAAAAAAAAAAAAAAAADtCVb5YY3//scf//7HH
+        //+xx///scf//7HH//+xx///scf//7HH//+xx///WGN//wAAAAAAAAAAAAAAAAAAAAAAAAB+hJW//7HH
+        //+xx///scf//7HH//9YY3//hJW//7HH//+xx///scf//1hjf/8AAAAAAAAAAAAAAAAAAAB+AAAAvoSV
+        v/+Elb//LDE//7HH//9YY3//f39//wAAAP8/Pz//LDE//wAAAH4AAABAAAAAAAAAAAAAAAAAAAAAAAAA
+        AL4sMT//LDE//wAAAP9YY3//WGN///////8/Pz//f39//1hjf/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AP8AAAC+AAAA/wAAAP8AAAD/AAAA/7HH//9YY3//hJW//4SVv/9YY3//AAAAQAAAAH4AAAAAAAAAAAAA
+        AAAAAABAAAAAfgAAAL4AAAD/AAAA/wAAAP9YY3//AAAA/wAAAP8AAAD/AAAA/wAAAL4AAABAAAAAAAAA
+        AAAAAAAAAAAAAAAAAEAAAABAAAAAQAAAAL4AAAD/AAAA/wAAAP8AAAD/AAAAvgAAAH4AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB+AAAAQAAAAH4AAAC+AAAAvgAAAEAAAAAAAAAAAAAA
+        AAAAAAAAgAEAAIABAACAAQAAAAEAAMADAADAAwAAwAMAAOABAADgAQAA8AEAAOAHAADgBwAAwAcAAPAD
+        AAD8DwAA/58AAA==
+</value>
+  </data>
 </root>
