--- a/Archivists' App/View/OptionsView.resx
+++ b/Archivists' App/View/OptionsView.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="MessageTextBox.Text" xml:space="preserve">
+    <value>Medieval (geo)politics was neither purely anarchical nor purely hierarchical, but contained both vertical and horizontal relations of subordination and co-ordination among highly differentiated bearers of political power. It is therefore misleading to subsume these diverse political authorities - pope, emperor, kings, dukes, counts, bishops, cities, lords - under the generic term ‘conflict unit’, since none of them enjoyed a monopoly over the means of violence guaranteeing exclusive control over a bounded territory.</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
