--- a/Archivists' App/View/OptionsView.resx
+++ b/Archivists' App/View/OptionsView.resx
@@ -120,8 +120,8 @@
   <data name="MessageTextBox.Text" xml:space="preserve">
     <value>Medieval (geo)politics was neither purely anarchical nor purely hierarchical, but contained both vertical and horizontal relations of subordination and co-ordination among highly differentiated bearers of political power. It is therefore misleading to subsume these diverse political authorities - pope, emperor, kings, dukes, counts, bishops, cities, lords - under the generic term ‘conflict unit’, since none of them enjoyed a monopoly over the means of violence guaranteeing exclusive control over a bounded territory.</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+    <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAICAAAAEACACoCAAAFgAAACgAAAAgAAAAQAAAAAEACAAAAAAAAAQAAAAAAAAAAAAAAAEAAAAA
         AAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAwMDAAMDcwADwyqYA1PD/ALHi/wCO1P8Aa8b/AEi4
