--- a/Archivists' App/View/Properties/Resources.resx
+++ b/Archivists' App/View/Properties/Resources.resx
@@ -119,63 +119,63 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="ActionsDocumentNew16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document New 16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Document New 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsDocumentNew32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document New 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Document New 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsDocumentNew48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document New 48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Document New 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsDocumentOpen16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document Open 16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Document Open 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsDocumentOpen32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document Open 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Document Open 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsDocumentOpen48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document Open 48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Document Open 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsEditCopy16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Copy 16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Edit Copy 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsEditCopy32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Copy 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Edit Copy 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsEditCopy48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Copy 48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Edit Copy 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsEditCut16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Cut 16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Edit Cut 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsEditCut32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Cut 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Edit Cut 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsEditCut48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Cut 48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Edit Cut 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsEditPaste16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Paste 16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Edit Paste 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsEditPaste32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Paste 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Edit Paste 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsEditPaste48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Paste 48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions Edit Paste 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsViewRefresh16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions View Refresh 16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions View Refresh 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsViewRefresh32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions View Refresh 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions View Refresh 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="ActionsViewRefresh48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions View Refresh 48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Actions View Refresh 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="Copy Flatastic 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Copy Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Copy Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <assembly alias="System.Drawing" name="System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
   <data name="CopyImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
@@ -191,7 +191,7 @@
 </value>
   </data>
   <data name="Cut Flatastic 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Cut Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Cut Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="CutImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -207,25 +207,25 @@
 </value>
   </data>
   <data name="DevicesVideoDisplay16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Devices Video Display 16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Devices Video Display 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="DevicesVideoDisplay32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Devices Video Display 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Devices Video Display 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="DevicesVideoDisplay48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Devices Video Display 48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Devices Video Display 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="FredFlintstone" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Fred Flintstone.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Fred Flintstone.jpg;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="HelpAndSupport16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Help and Support 16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Help and Support 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="HelpAndSupport32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Help and Support 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Help and Support 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="HelpAndSupport48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Help and Support 48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Help and Support 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="HelpImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -245,13 +245,13 @@
 </value>
   </data>
   <data name="MusicLibrary16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Music Library 16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Music Library 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="MusicLibrary32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Music Library 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Music Library 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="MusicLibrary48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Music Library 48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Music Library 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="NewImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -265,13 +265,13 @@
 </value>
   </data>
   <data name="News16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\News 16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\News 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="News32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\News 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\News 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="News48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\News 48x48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\News 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="OpenImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -290,7 +290,7 @@
 </value>
   </data>
   <data name="Paste Flatastic 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Paste Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Images\Paste Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
   </data>
   <data name="PasteImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
