--- a/Archivists' App/View/Properties/Resources.resx
+++ b/Archivists' App/View/Properties/Resources.resx
@@ -118,208 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="ActionsDocumentNew16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document New 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
+  <data name="Actions Document Open 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Actions Document Open 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ActionsDocumentNew32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document New 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsDocumentNew48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document New 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsDocumentOpen16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document Open 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsDocumentOpen32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document Open 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsDocumentOpen48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Document Open 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsEditCopy16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Copy 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsEditCopy32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Copy 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsEditCopy48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Copy 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsEditCut16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Cut 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsEditCut32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Cut 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsEditCut48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Cut 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsEditPaste16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Paste 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsEditPaste32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Paste 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsEditPaste48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions Edit Paste 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsViewRefresh16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions View Refresh 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsViewRefresh32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions View Refresh 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="ActionsViewRefresh48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Actions View Refresh 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="Copy Flatastic 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Copy Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
-  <data name="CopyImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAeBJREFUOE+9kd1LWnEYx8+fsgqJ6rrdj9ErDRoUXWywQS905UVddRUVDdaWDgfZ
-        1KjsDbWOdSIqI8XKXC20zL0Zcw02BSvOKcusY33zPFpWC7sY7Aufm9/5fT8Pz+8w/xxu4RskWJuXMMy4
-        MMB9xBsth+SV9JHKt6OfcKKudQgPS2vul5it3mQtkdjZObqG52BxePGsQXm/xDDrpqLFB7DrgMcv4L1+
-        GuySANMCD6OdR98sD9X4HvGiM3BTOMA5SSDl5DQG4SCKQChMgttpH9lBfq2DSNYZRmey08dexykUMwJa
-        2D9o7PdjeH6Xzq+nQRMCtyIgr2qCIIE6vq+091FExA4fwXZgH1/8u9BNBanUwcYIz9Y+XiqCyK2aRE7F
-        KLLLBxMCad/jqHg1Wa7zoV79Ge+M2yS4jHAoYuv3MRybB9Cwa5A96UkJhHAUX3+G4P4egNPzC7ZPP9Da
-        m/i9zSNhyNVBPH/rw9O2DULDrkJW2p0S5JdU/0WjaoMEYny9EC9i038Eq0uAeXEPH0adyCpSpR7yrtS0
-        r5Dg+uRLuk3LyCxQpBdUNtkROTmDbtwFrXkNmrFVmiyV1YYlZDx+nV5QJLfEX9tIZJfrISvTIqu4C5mF
-        yni5Aw8evUov+E9hmAvvwt9V5CJmDgAAAABJRU5ErkJggg==
-</value>
+  <data name="Actions View Refresh 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Actions View Refresh 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Cut Flatastic 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Cut Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
+    <value>..\Images\Cut Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CutImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAaFJREFUOE9jIAb8BwIokzBYuWn//9nLNsE1gDTfefD0f3XrFOIMmTx3zf+eaYv/
-        V7XOBGv49v3H/9Wb9vxPyaki3hWTZq/8P3nOapDl/5+9ePM/Lb/mv5gQHwne2Ljvf9fkhf9PnLn4/+Cx
-        c//D4rNJM2Dhqh3/u6cs+t87beH/8sa+/z5B0cRrBoHOiQv/lzT0/U/Oq/sfGpv53807iDQDQCAhr+V/
-        WELh/5C0tv/+CS3EGxDd8e5/ROfr/yHND/57l53671N+9r9f1eX/PqWn/7tl78RvUET7q/+RPe/+Bzfc
-        +W8dPe+/aVDff7e8ff/9q6/+dwVqtoqZj9+AsPbn/8Panv53TNsA1mwa1Pvfu+TUf//Kq/+dMjb9Nwnu
-        x29AaMuj/0GN9/47pW76bxzQDTYgAGi7b8XZ/xYR0/5rO2ThNyC46d5//7JL/+2S1/w39IEEnHfJ8f92
-        Sav+a9ok/5eR18RvgF/lxf/2SauBtnf9VzcLByce+5Q1/7WsE/6rm0f8N/Zvx2+Ac8aW/2Yhk/5rWMX+
-        N/Sqwa+YOoCBAQCRhekYW2pikQAAAABJRU5ErkJggg==
-</value>
+  <data name="Actions Document New 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Actions Document New 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="DevicesVideoDisplay16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Devices Video Display 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
+  <data name="Fred Flintstone" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Fred Flintstone.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="DevicesVideoDisplay32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Devices Video Display 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="DevicesVideoDisplay48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Devices Video Display 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="FredFlintstone" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Fred Flintstone.jpg;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="HelpAndSupport16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Help and Support 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="HelpAndSupport32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Help and Support 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="HelpAndSupport48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Help and Support 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="HelpImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAApZJREFUOE+NkltI01Ecx/cc9Fxi770ZvfZWEAn1EBKU4FtvZogWinkZc97Kuanz
-        Ms15zTUduamom9puNud0eXclOYZuTvOuhRcoPv03lcwU/MKPAwc+n3PO7/xE50Xd4KGkZJzs7EGyshwc
-        bV8sIThUExPr1NXPonk/g1R6QdEx7HKtU66awGpb46M5QL95Hm2LB0m283zRabirexmH4ycD1h1s1i36
-        +9bR6xdpap4WbjT0r+g03NEZxGLeoqdnlfaOZdoEsFU3T1PjHCqVB7l8jJy8oUPBaVhvCIRBgyFIi3aB
-        xkYvNTWzlJdPo1CMkp8/wotkMwnPjZxo2GYY1rbMo9MtoHnno75ujpb2ALLWTWJL94mR7SCpCSAvnyT+
-        mRF9++ChQNs6hVzhpq7By9vqr1SWeVCWTKHWBUnSQpUVPi8I5Yd6+y8e5/lpM3uY8/sQiSU2tLpJJFI7
-        suJhZEWjvCl0U9vsJVEDumFYXNomo8DEvSfq8Gpw7XIn0U2h0oXoZYoR33IAk2WMtPQ+xGJb+M9zm1ZQ
-        WQjnGB4Z84fX0nonUs0ScfEmRBlZGoqVvSxtB5lfFd5XYkGaa+dhwQaGsUNBKKFbhAS3HlRS0TxK08AB
-        EdcrEL0uGhJO7hfKiNkxxcbBd6zOL0SLA+hPCHZ+7IfhlBwTcytCLyx7XInM/zsHkhw76Zl9FJfZ8AYX
-        UHUvIu/cPcLBKZwur3HhFeApoZnJpR6iY9T/T2R6pplXgqjL8o27yeN0uQ/Y+w3GT36ibhczswgVXWtc
-        vqkkT2k5e6QzxRZS03ppaJvhRqwJca0PrWOPZusuSYoZLkUpSEj9wMBo4GzBcVTVboqUTuKethNxLZer
-        kRncf1SFTGVjaDIowCLRH7cEcC693uZVAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="MusicLibrary16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Music Library 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="MusicLibrary32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Music Library 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="MusicLibrary48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Music Library 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="NewImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAQtJREFUOE+tkMlqwlAYhfNS+g71NfSNxC5K6UItRQQLCi0q2tIBtBZENODQIsEJ
-        jXGqaRxijtzwi0ljL1n4weEu7jnf4hfORvKljr9J5GuIpcuIpopmqHoaNviP6/gzvL4AX3L/JFLdSSia
-        Rua9xpfEsxWqOwmGH83xITSxc/fwSXUnW31nSg4imtiJJAtUt2MYBlRtg6GimgLPhf+04CbxShM7642O
-        yVyDNJjzBVexPE2O6DsDC3WNvrxEU5rwBZe3GZod0VZbyNNftHszVFsyX8A+rbDDzX5W6AwXqLcVlMSB
-        e4H1cF+dKSqNEd7KXfcC6+HE7zGK1T5yH5I7AXt54QrYp5vQ5BwIwh7f9fWWqts0iwAAAABJRU5ErkJg
-        gg==
-</value>
-  </data>
-  <data name="News16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\News 16x16.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="News32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\News 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="News48x48" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\News 48x48.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="OpenImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAlhJREFUOE+9kVtIE1Ach/fQQ08WaVEIRZaEPQwDQ6qHkKSbopRmhZEmlLcuGIpt
-        U9u8Tndz6kqHuU3X1Gm1MgwrhEKRCC11lJiaBUWlmBkqefsam2iSQQ/RH34v55zvOz/OEfyXySkxI9Na
-        uJJvIk9nRaI0Mr/1dxOdrCMsXuWELogqyHTIUrINRCWXIKg3a1gujbXyP96SICklPFFFaHyhS9DbZWRy
-        tM6ZHyMWpocMWE0qbObsZSVhCWpC47QExxYjqKtUMzFSvQSe/VTKtD2J6op8qspyMZRkoi/M4LpSTLE8
-        dam0xqhg4otxAZ5zwPSKwR67bH4T3CyX8/2jfgFuqlc488BaQINFzp2qXKyGLCx6GSbdVW5o0yhTi9Ep
-        RC5ZlT6XsXdFztoDLVJs1WpmB2QwmL00bx1r/RLoSYZXiXTWRnApJgSBQZfFt758eK/kbo2KtodK16Ff
-        q7+MgvZwZlqDmHwUwJtKIedPH3AJyrVSvr6WMdiajs2iZK5fCt1xLrAzxgGeYKYthMnm/Yw17mG4fgey
-        eG9OBnq43qJUnc5wl4hbZgUdTx1NepIcgrPQcYq5Z0eYenKI8aa9jNj8+FzjQ3vOaiKDvPDb5uYS6ArE
-        dDdncNtcAH0Z8MJR9/kxplqCGX8cwGiDP0NWIR+MW7Er3ZHGbsF3u+fiTxTlpVJnysd+L4F2jWAhbcoV
-        NMtXcj9zFbVpazGkenLt8iYiD2/G33fjokCTnYJGeo48UTSSi8edD3MmIpCjB3exb7eQnUJvfLw82bjB
-        g3Vr3FjvPl/934xA8BMxLu5f2Qy04AAAAABJRU5ErkJggg==
-</value>
+  <data name="Copy Flatastic 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Copy Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Paste Flatastic 32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Paste Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51</value>
-  </data>
-  <data name="PasteImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAldJREFUOE+1kl1IU2Ecxg90YTdFH9RVVwXRTRQRVBcZha2w2WKR2KLlIrZJySZL
-        20ZqzRy6dHNp2hb5MdSmsxKlSdEQGo6+Z2xGHxI5I9eydjY357J4OufdRq6MIOiBhwPveZ/f/4OX+i9y
-        9mvhuKFBb4sKsvx9SB7Pr552A+a6pfYIgv4ORPxX4RupQYmYA0OlApd1ahgri4mT0YTYUIy2IR7qRizY
-        CUuTAtHJNpRIeHgxpMTZU1woRZvhdx7DpH01ZML9vwPYcDxkRaP2KNyuGtDv6zExosZb13H0mXmQCDLR
-        UboKTw0UCg7/MlJ3W20CQF+HrlSIckUe1IW5OFPAh0LMg1zEhVSQhTrZGgLIy85MB3Q26zBDd2EmYEJ0
-        vAqB54Xwti0n9rQug7tpER4ZM0iYdda2jekAi0mL6UALpscqEH15EpFnB0H3L4a+1Y4qUy/OXeqCUmeB
-        XGOGRGWEsKg6HdDcoMGUz4jIiBhTj7kI39+Ej7dWkHBK8dlvCIZiGJsIIld6Hjn56p8Qs74M9KsKhB9y
-        EB5cj9DASvhaKVKZVfNNJ7HJ6oBn1E/Cd4e82MMXJSAN1Sp8Hj6NkGMd6NtLEbBlYPQaRdr+OvsdX8JM
-        5Q9BeN744Rp+h2yBHBwmvGvvAWRu3wGq7kIxAg+kTHgJPvUsxHj7AngbKciYmdm2Ux1cYTqotwygb9BL
-        vqy3blgL6mJ5EXkgqS2nLGYWNrfyPddrErbdccNqf5IO0JedYF4YDyL+buTs3EJ+sNtmZ05Vm88E8Ccd
-        YrbNXvibk9f/VRT1A5M1+NnVXX4zAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="RefreshImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAflJREFUOE9jIAbwKvKq6aSplEO5JAALBk4gyaUZqhjT8bXwv7A2nylEggCQ9RQP
-        955vtyH1WNjd7AvR90tvJD7v/lb6P3K951mgNCtEFXbAZNWoN6/secL/1h85/zv/5/9v/pPxv/hV9P/E
-        Gz7/I645/5dPFG6GqsUEZlW6k4qex/wP3uj42Gai7i6LHq0NXhuNr8becvvvddzsv/V+9f/y88U/M3Ax
-        SEC1IICwAZ9p4E77j+L2QjlArghElIFBPl60IuCW5X+TpUpfpVJ4lrJIMlgDhVkgskhA1lc8gVua3QHK
-        hQP1dqn1cimC81gFGPSgQjgBI5RGBVwMklAWaYBTllOKV5fXAspFBYIM/FAWJuDQ5JDXLJZvCt5v/1I+
-        ULIRKgwDLEqVYlO5NZldoHwE4BJhkFQvkuv32mX4Numa9//Um/7/+U05A4F2CXDqMshIJwiF2m/VOWk4
-        WfYGUDkHRBcS4FZk1Qs6afs/7qL7/9grLv9THwINuefyKeGq18vYq+6fY++7/rffJP2LRZzBHKoFEyjG
-        STZGPbD/n/rY63/lz9j/1X8S/he8D/sfcd3pvwHQZmY5ZieoUpyAzWW9wdmq33H/zTs0NhhVqyxUz5Ga
-        zWfLmQ6Ug6cNvIDXkMMy8rr9V6Av5aBCpANeQzZfIAXKiQQAAwMAv9CbR6hMD6IAAAAASUVORK5CYII=
-</value>
+    <value>..\Images\Paste Flatastic 32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
