--- a/View/MessageView.resx
+++ b/View/MessageView.resx
@@ -57,4 +57,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABcsM58BVn4gAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABeLRa/bzkc72k0GTBnMxi/ATdcEAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAABxOYK8BRGogf1E4z4JgT+9zc3NAek85v1YpEzAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABlMhi/AAAAAIBaSL9xU0jvYVJPn2I5J/9XKxVAAAAAAAAA
+        AAAAAAAAATdcIDVRU78AAAAAAAAAAAAAAABrNxkgYjAWz1ouGM94UTv/WzYp/08mF/9TJhL/USUS31Un
+        E3BaKxQwAAAAAAAAAABpNBm/AAAAAAAAAABZKhSfWDMk/3ZkW/9jXVj/bVND/5l9cP+Ka13/YDMd/1ws
+        FP9fLhX/TyMR72dGOo99XVGflHVl37SWhUB9Qx4gXS4Xn1kzJP9cLRX/ViwU/0gjEP9NKRj/kXFh/41o
+        VP9vPyT/ajYY/1QnEv9GHQ//VScT/2s8I/+piHT/qYJpvwAAAABuSjy/WDUm/1U3Kf93Vkr/YT0v/4tr
+        XP+ZeGj/iWNO/3pTPP9fMhv/TSsf/zseEf9IJBH/jW5c/6mFbb8AAAAAhm9qMKGOiGCUdWS/wq+k/6CG
+        ev9uRTP/bkQw/25DLv9LQDr/ZkEt/4JWPf+VbVf/oXlg3592Wr+LWTiPAAAAAAAAAAAAAAAAAAAAAGdD
+        Na9wSjn/Yzon/2Q7Kf9SMCL/Z1BG/2hALv9pQS//Zz4s/2pCMO9bLxpgAAAAAAAAAAAAAAAAAAAAAAAA
+        AABKIBAQrZeMz4ViUf+AW0j/V0c//4BgUf91TTn/XzEa/1ssFP9gMRv/YjUf/10xHEAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAForFCC9qJ7vgVlF/1lKQf9rPCT/Zjkj/4RcSO+edV6/qoVvv5t6aYBbMR4wAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAjWZRMIlhSv9ELSH/aDUY/04kE58AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACKXUJgcEAj/2w3Gf9pNBjvbzkaEAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAP5/AADwfwAAwH8AANBzAACAGwAAAAAAAAAAAACAAAAAgAAAAPABAADwAAAA+AAAAPwf
+        AAD+DwAA//8AAA==
+</value>
+  </data>
 </root>
